# witness

./: .gitignore  BENCHMARKS.md  CHANGELOG.md  Cargo.toml  FEATURES.md  INSTALL.md  LICENSE  README.md  ROADMAP.md  TESTING.md  clippy.toml  deny.toml
.cargo/: audit.toml
.github/workflows/: ci.yml  release.yml
benchmark/: app_fields_payload.rs  bench_throughput.rs  gen_logs.rs  null_receiver.rs  run.sh
configs/: example.toml
scripts/: install.sh
src/: config.rs  config_test.rs  curl.rs  install.rs  lib.rs  main.rs  remote_config.rs  remote_config_test.rs  service_windows.rs  service_windows_test.rs  setup.rs  sink.rs  sink_test.rs
src/collectors/: collectors_test.rs  mod.rs
src/collectors/linux/: cgroups.rs  container.rs  container_test.rs  cpu.rs  disk.rs  disk_test.rs  load.rs  memory.rs  mod.rs  network.rs  network_test.rs  process.rs  tcp.rs
src/collectors/macos/: cpu.rs  cpu_test.rs  disk.rs  disk_test.rs  load.rs  load_test.rs  memory.rs  memory_test.rs  mod.rs  network.rs  network_test.rs
src/install/: launchd.rs  launchd_test.rs  mod.rs  platform.rs  platform_test.rs  platform_windows.rs  platform_windows_test.rs  systemd.rs  windows.rs  windows_test.rs
src/logs/: eventlog.rs  eventlog_filter.rs  eventlog_filter_test.rs  eventlog_parse.rs  eventlog_parse_test.rs  journal.rs  journal_test.rs  mod.rs  multiline.rs  multiline_test.rs  source.rs  source_test.rs  structured.rs  structured_test.rs  syslog.rs  syslog_test.rs  unified.rs  unified_parse.rs  unified_test.rs  watcher.rs  watcher_test.rs
src/metrics/: metrics_test.rs  mod.rs
src/metrics/linux/: cgroups.rs  cgroups_test.rs  container.rs  container_test.rs  cpu.rs  cpu_test.rs  disk.rs  disk_test.rs  load.rs  load_test.rs  memory.rs  memory_test.rs  mod.rs  network.rs  network_test.rs  process.rs  process_test.rs  tcp.rs  tcp_test.rs
src/metrics/macos/: cpu.rs  cpu_test.rs  disk.rs  disk_test.rs  init_test.rs  load.rs  load_test.rs  memory.rs  memory_test.rs  mod.rs  network.rs  network_test.rs
src/tail/: mod.rs  watcher.rs  watcher_test.rs
systemd/: tell-agent.service  witness.service
tests/: macos_pipeline.rs  macos_smoke.rs
