[package]
name = "witness"
version = "0.2.0"
edition = "2024"
rust-version = "1.93"
description = "Lightweight host monitoring agent for the Tell platform"
license = "MIT"
authors = ["Tell Contributors"]
repository = "https://github.com/tell-rs/witness"

[[example]]
name = "bench_throughput"
path = "benchmark/bench_throughput.rs"

[[example]]
name = "null_receiver"
path = "benchmark/null_receiver.rs"

[[example]]
name = "gen_logs"
path = "benchmark/gen_logs.rs"

[dependencies]
tell = "0.4.1"
tokio = { version = "1.43", features = ["rt-multi-thread", "net", "sync", "time", "macros", "signal", "fs", "io-util", "process"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
glob = "0.3"
libc = "0.2"
thiserror = "2.0"
anyhow = "1.0"

[target.'cfg(target_os = "macos")'.dependencies]
mach2 = "0.6"

[lints.clippy]
# --- Prefer idiomatic Rust over manual implementations ---
manual_clamp = "deny"
manual_filter = "deny"
manual_find = "deny"
manual_flatten = "deny"
manual_map = "deny"
manual_memcpy = "deny"
manual_non_exhaustive = "deny"
manual_ok_or = "deny"
manual_range_contains = "deny"
manual_retain = "deny"
manual_strip = "deny"
manual_try_fold = "deny"
manual_unwrap_or = "deny"

# --- Remove unnecessary code ---
needless_borrow = "deny"
needless_borrowed_reference = "deny"
needless_collect = "deny"
needless_late_init = "deny"
needless_option_as_deref = "deny"
needless_question_mark = "deny"
needless_update = "deny"

# --- Remove redundant code ---
redundant_clone = "deny"
redundant_closure = "deny"
redundant_closure_for_method_calls = "deny"
redundant_static_lifetimes = "deny"

# --- Performance ---
trivially_copy_pass_by_ref = "deny"
unnecessary_filter_map = "deny"
unnecessary_lazy_evaluations = "deny"
unnecessary_sort_by = "deny"
unnecessary_to_owned = "deny"

# --- Style ---
uninlined_format_args = "deny"
identity_op = "deny"

# --- Allow collapsible_if (match tell-rs) ---
collapsible_if = "allow"

[profile.release]
codegen-units = 1      # Better cross-crate optimization
lto = "thin"           # Cross-crate inlining
opt-level = 3          # Maximum speed
panic = "abort"
strip = true

[profile.bench]
lto = true
codegen-units = 1

[profile.ci-test]
inherits = "test"
debug = 1              # Reduce debug symbol size for faster CI
opt-level = 0

[dev-dependencies]
tempfile = "3.27.0"
